--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -13,14 +13,16 @@
  limitations under the License.
 -->
 <resources>
-    <string name="digital_config_text">Digital watch face configuration</string>
+    <string name="app_name">CircaText</string>
+
+    <string name="digital_config_text">CircaText Configuration</string>
     <string name="digital_config_background">Background</string>
     <string name="digital_config_hours">Hours</string>
     <string name="digital_config_minutes">Minutes</string>
     <string name="digital_config_seconds">Seconds</string>
 
     <string name="title_no_device_connected">No wearable device is currently connected.</string>
-    <string name="ok_no_device_connected">OK</string>
+    <string name="ok_no_device_connected">Connected</string>
 
     <string name="color_black">Black</string>
     <string name="color_blue">Blue</string>
