--- a/Wearable/src/main/res/values/strings.xml
+++ b/Wearable/src/main/res/values/strings.xml
@@ -14,17 +14,13 @@
  limitations under the License.
 -->
 <resources>
-    <string name="app_name">WatchFace</string>
-    <string name="digital_name">Sample Digital</string>
-    <string name="digital_background_color">Background color</string>
-    <string name="digital_config_name">Digital watch face configuration</string>
+    <string name="app_name">CircaText</string>
+
+    <string name="digital_name">CircaText</string>
+    <string name="digital_background_color">Background Color</string>
+    <string name="digital_config_name">CircaText Configuration</string>
     <string name="digital_am">AM</string>
     <string name="digital_pm">PM</string>
-    <string name="calendar_name">Sample Calendar</string>
-    <plurals name="calendar_meetings">
-        <item quantity="one">&lt;br&gt;&lt;br&gt;&lt;br&gt;You have &lt;b&gt;%1$d&lt;/b&gt; meeting in the next 24 hours.</item>
-        <item quantity="other">&lt;br&gt;&lt;br&gt;&lt;br&gt;You have &lt;b&gt;%1$d&lt;/b&gt; meetings in the next 24 hours.</item>
-    </plurals>
 
     <!-- TODO: this should be shared (needs covering all the samples with Gradle build model) -->
     <string name="color_black">Black</string>
