--- a/Application/src/main/res/values/strings.xml
+++ b/Application/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
         <item>@string/color_red</item>
         <item>@string/color_white</item>
     </string-array>
+
+    <string name="excluded_calendar_hint">Comma separated calendar names.</string>
 </resources>
