--- a/Wearable/src/main/res/values/strings.xml
+++ b/Wearable/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
 <resources>
     <string name="app_name">CircaText</string>
     <string name="digital_name">CircaText</string>
+    <string name="title_activity_config">CircaText Config</string>
+    <string name="hello_round">Hello Round World!</string>
+    <string name="hello_square">Hello Square World!</string>
 </resources>
