Added first crude version of watchface selection.

--- a/Wearable/src/main/res/values/strings.xml
+++ b/Wearable/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="title_activity_config">CircaText Config</string>
     <string name="hello_round">Hello Round World!</string>
     <string name="hello_square">Hello Square World!</string>
+    <string name="digital_background_color">Select Watchface</string>
 </resources>
