--- a/Wearable/src/main/res/values/strings.xml
+++ b/Wearable/src/main/res/values/strings.xml
@@ -17,7 +17,6 @@
     <string name="app_name">CircaText</string>
     <string name="digital_name">CircaText</string>
     <string name="title_activity_config">CircaText Config</string>
-    <string name="hello_round">Hello Round World!</string>
-    <string name="hello_square">Hello Square World!</string>
     <string name="digital_background_color">Select Watchface</string>
+    <string name="placeholder">Placeholder</string>
 </resources>
